@@ -1609,7 +1609,7 @@ issues a warning otherwise. This ensures that the parser always terminates.
 
 \paragraph{Error-related keywords}
 
-A couple of error-related keywords are made available to semantic actions.
+The following keyword is made available to semantic actions.
 
 When the \verb+$syntaxerror+ keyword is evaluated, evaluation of the semantic
 action is aborted, so that the current reduction is abandoned; the current
@@ -1618,12 +1618,6 @@ handling mode is entered.  Note that there is no mechanism for inserting an
 \error token \emph{in front of} the current lookahead token, even though this
 might also be desirable.  It is unclear whether this keyword is useful; it
 might be suppressed in the future.
-
-The \verb+$previouserror+ keyword evaluates to an integer value, and indicates
-how many tokens were successfully shifted since the last \error token was
-shifted. This allows heuristics such as \textit{``when a new error is detected, do not
-display a new error message unless the previous error is ancient enough''} to
-be implemented if and where desired.
 
 \paragraph{When are errors detected?}
 
