@@ -1,3 +1,6 @@
+2014/12/02:
+Removed support for the $previouserror keyword.
+
 2014/02/18:
 In the Coq backend, use ' instead of _ as separator in identifiers.
 Also, correct a serious bug that was inadvertently introduced on
